--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "main": "main.js",
   "scripts": {
     "build": "node esbuild.config.js",
-    "dev": "node esbuild.config.js --watch"
+    "dev": "node esbuild.config.js --watch",
+    "release": "npm version patch && git push && git push --tags"
   },
   "devDependencies": {
     "esbuild": "^0.25.5",
-    "obsidian": "^1.5.12",
-    "typescript": "^5.4.5"
+    "obsidian": "^1.8.7",
+    "typescript": "^5.8.3"
   }
 }
