--- a/.github/workflows/obsidian-plugin.yml
+++ b/.github/workflows/obsidian-plugin.yml
@@ -1,7 +1,4 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Build Obsidian Plugin
+name: Build and Release Obsidian Plugin
 
 on:
   release:
@@ -9,34 +6,27 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    
-    - run: npm ci
-    - run: npm run build --if-present
-    
-    - name: Upload plugin files
-      uses: actions/upload-artifact@v4
-      with:
-        name: obsidian-plugin-build
-        path: |
-          main.js
-          manifest.json
- 
-  release:
+      - uses: actions/checkout@v4
+      - name: Use Node.js 22.x
+        # Using Node.js 22.x as specified in the plugin's package.json
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run build
+      - name: Upload plugin files
+        uses: actions/upload-artifact@v4
+        with:
+          name: obsidian-plugin-build
+          path: |
+            main.js
+            manifest.json
+            styles.css
+
+  upload_release:
     needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'release'
@@ -46,9 +36,7 @@ jobs:
         with:
           name: obsidian-plugin-build
           path: ./release
-
-      - name: Upload to release
+      - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           files: release/*
-
