--- a/.github/workflows/obsidian-plugin.yml
+++ b/.github/workflows/obsidian-plugin.yml
@@ -1,8 +1,9 @@
 name: Build and Release Obsidian Plugin
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
 
 jobs:
   build:
