--- a/.github/workflows/Build and Release.yml
+++ b/.github/workflows/Build and Release.yml
@@ -9,20 +9,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      new_version: ${{ steps.bump_version.outputs.new_version }}
+      new_version: ${{ steps.set_version.outputs.new_version }}
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # Needed for version check and pushing tags
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - run: npm ci
-      - run: npm run build
-
+      # 1. Check if version was changed
       - name: Check if package.json version was changed in this push
         id: check_version
         run: |
@@ -35,23 +33,24 @@ jobs:
             echo "version_changed=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Bump patch version
-        if: steps.check_version.outputs.version_changed == 'false'
-        id: bump_version
+      # 2. Conditionally bump patch version or just get the current one
+      - name: Bump patch version if needed & output version for later jobs
+        id: set_version
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-          NEW_VER=$(npm version patch -m "chore: bump version to %s [skip ci]")
-          git push origin HEAD:master --follow-tags
-          echo "new_version=$NEW_VER" >> $GITHUB_OUTPUT
 
-      # If version was already bumped (minor/major), use the current version for the release
-      - name: Get current version as release version (if no patch bump)
-        if: steps.check_version.outputs.version_changed == 'true'
-        id: curr_version
-        run: |
-          CUR_VER=$(node -p "require('./package.json').version")
-          echo "new_version=v$CUR_VER" >> $GITHUB_OUTPUT
+          if [ "${{ steps.check_version.outputs.version_changed }}" = "false" ]; then
+            NEW_VER=$(npm version patch -m "chore: bump version to %s [skip ci]")
+            git push origin HEAD:master --follow-tags
+            NEW_VER=${NEW_VER#v}
+          else
+            NEW_VER=$(node -p "require('./package.json').version")
+          fi
+          echo "new_version=v$NEW_VER" >> $GITHUB_OUTPUT
+
+      - run: npm ci
+      - run: npm run build
 
       - name: Upload plugin files
         uses: actions/upload-artifact@v4
@@ -80,8 +79,8 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ needs.build.outputs.new_version || needs.build.outputs.curr_version }}
-          name: Release ${{ needs.build.outputs.new_version || needs.build.outputs.curr_version }}
+          tag_name: ${{ needs.build.outputs.new_version }}
+          name: Release ${{ needs.build.outputs.new_version }}
           body: |
-            Automated release of version ${{ needs.build.outputs.new_version || needs.build.outputs.curr_version }}.
+            Automated release of version ${{ needs.build.outputs.new_version }}.
           files: release/*
