Update Build and Release.yml
updated release output to not have a prefixed 'v' before the version number

--- a/.github/workflows/Build and Release.yml
+++ b/.github/workflows/Build and Release.yml
@@ -56,7 +56,7 @@ jobs:
           else
             NEW_VER=$(node -p "require('./package.json').version")
           fi
-          echo "new_version=v$NEW_VER" >> $GITHUB_OUTPUT
+          echo "new_version=$NEW_VER" >> $GITHUB_OUTPUT
 
       - run: npm ci
       - run: npm run build
