--- a/.github/workflows/Build and Release.yml
+++ b/.github/workflows/Build and Release.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: 20
 
-      # 1. Check if version was changed
+      # Check if version was changed manually in this push
       - name: Check if package.json version was changed in this push
         id: check_version
         run: |
@@ -37,26 +37,49 @@ jobs:
             echo "version_changed=false" >> $GITHUB_OUTPUT
           fi
 
-      # 2. Add Access Token to allow github-actions[bot] to change repo files
+      # Set up PAT for pushing to repo
       - name: Set up PAT for pushing to repo
         run: |
           git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git
 
-      # 3. Conditionally bump patch version or just get the current one
+      # Conditionally bump patch version or just get the current one (strip leading "v" if present)
       - name: Bump patch version if needed & output version for later jobs
         id: set_version
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
-
           if [ "${{ steps.check_version.outputs.version_changed }}" = "false" ]; then
             NEW_VER=$(npm version patch -m "chore: bump version to %s [skip ci]")
             git push origin HEAD:master --follow-tags
-            NEW_VER=${NEW_VER#v}
+            # Remove leading 'v' if present
+            CLEAN_VER=${NEW_VER#v}
           else
-            NEW_VER=$(node -p "require('./package.json').version")
+            CUR_VER=$(node -p "require('./package.json').version")
+            CLEAN_VER=${CUR_VER#v}
           fi
-          echo "new_version=$NEW_VER" >> $GITHUB_OUTPUT
+          echo "new_version=$CLEAN_VER" >> $GITHUB_OUTPUT
+
+      # Update manifest.json version to match
+      - name: Update manifest.json version
+        run: |
+          VERSION="${{ steps.set_version.outputs.new_version }}"
+          node -e "
+            const fs = require('fs');
+            const m = JSON.parse(fs.readFileSync('manifest.json', 'utf8'));
+            m.version = process.env.VERSION;
+            fs.writeFileSync('manifest.json', JSON.stringify(m, null, 2) + '\n');
+          "
+        env:
+          VERSION: ${{ steps.set_version.outputs.new_version }}
+
+      # Commit and push manifest version bump
+      - name: Commit manifest version bump
+        run: |
+          git add manifest.json
+          git commit -m "chore: update manifest.json version to $VERSION [skip ci]" || echo "No changes to commit"
+          git push origin HEAD:master
+        env:
+          VERSION: ${{ steps.set_version.outputs.new_version }}
 
       - run: npm ci
       - run: npm run build
@@ -73,7 +96,7 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master' && needs.build.outputs.new_version != ''
     steps:
       - uses: actions/checkout@v4
         with:
