--- a/.github/workflows/Build and Release.yml
+++ b/.github/workflows/Build and Release.yml
@@ -49,15 +49,15 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
           if [ "${{ steps.check_version.outputs.version_changed }}" = "false" ]; then
-            NEW_VER=$(npm version patch -m "chore: bump version to %s [skip ci]")
-            git push origin HEAD:master --follow-tags
-            # Remove leading 'v' if present
-            CLEAN_VER=${NEW_VER#v}
+            npm version patch --no-git-tag-version -m "chore: bump version to %s [skip ci]"
+            NEW_VER=$(node -p "require('./package.json').version")
+            git commit -a -m "chore: bump version to $NEW_VER [skip ci]"
+            git tag "$NEW_VER"
+            git push origin HEAD:master --tags
           else
-            CUR_VER=$(node -p "require('./package.json').version")
-            CLEAN_VER=${CUR_VER#v}
+            NEW_VER=$(node -p "require('./package.json').version")
           fi
-          echo "new_version=$CLEAN_VER" >> $GITHUB_OUTPUT
+          echo "new_version=$NEW_VER" >> $GITHUB_OUTPUT
 
       # Update manifest.json version to match
       - name: Update manifest.json version
