--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.1.1",
   "minAppVersion": "0.15.0",
   "description": "Lets you customize your comment syntax/formats.",
-  "main": "main.js",
+  "main": "dist/main.js",
   "author": "Jack Chronicle",
   "authorUrl": "https://github.com/Jack-Chronicle",
   "isDesktopOnly": false
